--- a/src/Components/Sidebar/SearchHooksInput.module.scss
+++ b/src/Components/Sidebar/SearchHooksInput.module.scss
@@ -3,6 +3,7 @@
   width: 202px;
   background-color: #fff;
   border-radius: 6px;
+  z-index: 2;
 }
 
 .SearchForm input,
@@ -55,7 +56,6 @@
   font-weight: bold;
   font-size: 1rem;
   width: 50px;
-  background-color: #fff;
   color: #2f2f2f;
   border-radius: 0 6px 6px 0;
   cursor: pointer;
@@ -64,37 +64,4 @@
     outline: none;
     border: solid 2px #57bd84;
   }
-}
-
-.suggestionMenu {
-  background-color: #1e1e1e;
-  width: 100%;
-  border-radius: 4px;
-  user-select: none;
-  opacity: 0;
-  pointer-events: none;
-  transition: .2s opacity;
-
-  &.active {
-    opacity: 1;
-    pointer-events: all;
-  }
-}
-
-.searchItem {
-  padding: 10px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-  &:hover {
-    background-color: #0d263e;
-  }
-}
-
-
-.searchItem>i {
-  margin-right: 10px;
-  font-size: .7rem;
 }
