fix focus tabindex, simple changes

--- a/src/Components/Sidebar/SideBar.module.scss
+++ b/src/Components/Sidebar/SideBar.module.scss
@@ -152,7 +152,8 @@
 }
 
 .sidebarWrapper:hover .closeSideBarButton,
-.sidebarWrapper .closeSideBarButton.active {
+.sidebarWrapper .closeSideBarButton.active,
+.sidebarWrapper:has(:focus-visible) .closeSideBarButton {
   opacity: 1;
 }
 
