--- a/src/Components/Sidebar/SuggestionsMenu.module.scss
+++ b/src/Components/Sidebar/SuggestionsMenu.module.scss
@@ -1,6 +1,5 @@
-
 .suggestionMenu {
-  background-color: #1e1e1e;
+  background-color: var(--darker-gray);
   border-radius: 4px;
   width: 202px;
   max-height: 390px;
