--- a/src/Components/Shared/Features/DarkMode.module.scss
+++ b/src/Components/Shared/Features/DarkMode.module.scss
@@ -1,7 +1,7 @@
-.focusModeButton {
+.darkModeButton {
   position: fixed;
   right: 15px;
-  top: 40px;
+  top: 180px;
   background-color: transparent;
   border: solid 2px var(--white);
   border-radius: 4px;
@@ -17,7 +17,7 @@
   }
 }
 
-.focusModeButton.focusMode {
+.darkModeButton.focusMode {
   opacity: .2;
   transition: opacity .2s;
 
@@ -27,7 +27,7 @@
 }
 
 
-.focusModeButton>i {
+.darkModeButton>i {
   font-size: 1rem;
   color: var(--white);
   padding: 7px 6px;
@@ -36,11 +36,11 @@
   z-index: 100;
 }
 
-.focusModeButton:focus-visible>i {
+.darkModeButton:focus-visible>i {
   color: var(--cyan-blue);
 }
 
-.focusModeButton .eyeSlashIcon {
+.darkModeButton .eyeSlashIcon {
   padding: 7.3px 6px;
   font-size: .9rem;
 }
