--- a/src/Components/Sidebar/ActiveHooksMenu.module.scss
+++ b/src/Components/Sidebar/ActiveHooksMenu.module.scss
@@ -9,8 +9,8 @@
 .hooksMenu>li>a {
   text-decoration: none;
   padding: 12px 10px;
-  background-color: #070b10;
-  color: var(--text);
+  background-color: var(--black);
+  color: #fff;
   font-size: 1.1rem;
   width: 200px;
   display: flex;
@@ -19,12 +19,12 @@
   transition: background-color .2s;
 
   &:hover {
-    background-color: #2b2b2b;
+    background-color: var(--black2);
   }
 
   &.active {
-    background-color: var(--text);
-    color: var(--background);
+    background-color: var(--white);
+    color: var(--extra-dark-blue);
   }
 }
 
