--- a/src/GlobalStyles/index.scss
+++ b/src/GlobalStyles/index.scss
@@ -7,7 +7,7 @@
 }
 
 ::selection {
-  background-color: rgba(69, 69, 69, 0.54);
+  background-color: var(--dark-gray-opacity5);
 }
 
 html {
@@ -15,8 +15,8 @@ html {
 }
 
 body {
-  background-color: var(--background);
-  color: var(--text);
+  background-color: var(--extra-dark-blue);
+  color: var(--white);
   font-family: 'Roboto', sans-serif;
   padding-left: 292px;
   transition: padding .5s ease-in-out;
@@ -34,11 +34,6 @@ body.sidebarExtend {
   body {
     padding-left: 0;
   }
-}
-
-:root {
-  --background: #0a1119;
-  --text: #fff;
 }
 
 li {
@@ -86,7 +81,7 @@ p {
   transition: color .3s;
   padding: 0;
   margin: 0 4px;
-  color: #2483ff;
+  color: var(--cyan-blue);
   outline: none;
 
   &:first-child {
@@ -98,7 +93,7 @@ p {
   }
 
   &:focus-visible {
-    outline: solid 2px #2483ff;
+    outline: solid 2px var(--cyan-blue);
   }
 }
 
@@ -109,7 +104,7 @@ p {
   bottom: -2px;
   width: calc(100% + 2px);
   height: 2px;
-  background-color: #2483ff;
+  background-color: var(--cyan-blue);
   transition: height .3s, opacity .2s .2s;
 }
 
@@ -120,8 +115,8 @@ p {
 }
 
 .skip-content {
-  background-color: var(--background);
-  color: var(--text);
+  background-color: var(--extra-dark-blue);
+  color: var(--white);
   text-decoration: none;
   border-radius: 6px;
   position: fixed;
