setup more dark/white mode colors

--- a/src/Components/Sidebar/SuggestionsMenu.module.scss
+++ b/src/Components/Sidebar/SuggestionsMenu.module.scss
@@ -25,7 +25,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  color: var(--black2);
+  color: #fff;
 
   &:hover {
     background-color: #323538;
