--- a/src/Components/Shared/MiniComponents/HooksNavigator.module.scss
+++ b/src/Components/Shared/MiniComponents/HooksNavigator.module.scss
@@ -11,7 +11,7 @@
   position: relative;
   font-size: inherit;
   font-family: inherit;
-  color: var(--white);
+  color: #fff;
   padding: .5em 1em;
   outline: none;
   border: none;
