--- a/src/Components/Sidebar/ActiveHooksMenu.module.scss
+++ b/src/Components/Sidebar/ActiveHooksMenu.module.scss
@@ -16,15 +16,17 @@
   display: flex;
   justify-content: center;
   border-radius: 5px;
+  border: solid 2px var(--black);
   transition: background-color .2s;
 
   &:hover {
     background-color: var(--black2);
+    color: var(--white);
   }
 
   &.active {
-    background-color: var(--white);
-    color: var(--extra-dark-blue);
+    background-color: var(--black2);
+    color: var(--white);
   }
 }
 
