--- a/src/Components/Shared/Features/DarkMode.module.scss
+++ b/src/Components/Shared/Features/DarkMode.module.scss
@@ -2,6 +2,8 @@
   position: fixed;
   right: 15px;
   top: 180px;
+  min-width: 30px;
+  min-height: 30px;
   background-color: transparent;
   border: solid 2px var(--white);
   border-radius: 4px;
