--- a/src/Components/Sidebar/DownloadHooksButton.module.scss
+++ b/src/Components/Sidebar/DownloadHooksButton.module.scss
@@ -31,6 +31,8 @@
 .downloadAllButton>i {
   background-color: var(--dark-cyan);
   color: #fff;;
+  min-width: 47px;
+  min-height: 100%;
   padding: 16px 18px;
   font-size: 1rem;
   border-radius: 0 5px 5px 0;
