--- a/src/GlobalStyles/index.scss
+++ b/src/GlobalStyles/index.scss
@@ -22,8 +22,8 @@ body {
   transition: padding .5s ease-in-out;
 }
 
-body.focusMode::-webkit-scrollbar {
-  width: 0;
+body.focusMode {
+  overflow: hidden;
 }
 
 body.sidebarExtend {
@@ -135,5 +135,17 @@ main {
   &:focus {
     left: 50%;
     top: 10px;
+  }
+}
+
+.linenumber {
+  color: #7f8799 !important;
+  min-width: 20px !important;
+  padding-right: 30px !important;
+}
+
+@include medium {
+  .linenumber {
+    min-width: 40px !important;
   }
 }
