--- a/src/GlobalStyles/colors.scss
+++ b/src/GlobalStyles/colors.scss
@@ -12,6 +12,8 @@
   --gray-opacity2: rgba(255, 255, 255, .2);
   --gray-opacity23: rgba(186, 186, 186, .23);
   --black-opacity18: rgba(0, 0, 0, .18);
+  --error-guy-color: #1e1e1e;
+  --error-guy-color2: #2b2b2b;
   --very-light-gray: #f0f0f0;
   --white: #fff;
   --cyan-blue: #2483ff;
