light/dark mode styles

--- a/src/Components/Home/Hooks/HookCode.module.scss
+++ b/src/Components/Home/Hooks/HookCode.module.scss
@@ -182,6 +182,7 @@
 .preElement>code::selection,
 .preElement>code>span::selection {
   background-color: #0e2238 !important;
+  color: #fff !important;
 }
 
 .preElement>code {
