--- a/src/Components/Shared/Mods/DarkMode.module.scss
+++ b/src/Components/Shared/Mods/DarkMode.module.scss
@@ -32,7 +32,7 @@
 .darkModeButton>i {
   font-size: 1rem;
   color: var(--white);
-  padding: 7px 6px;
+  padding: 6.4px 8.4px;
   cursor: pointer;
   transition: opacity .2s, border-color .2s;
 }
@@ -41,7 +41,6 @@
   color: var(--cyan-blue);
 }
 
-.darkModeButton .eyeSlashIcon {
-  padding: 7.3px 6px;
-  font-size: .9rem;
+.darkModeButton .sunIcon {
+  padding: 6.4px 6.4px;
 }
