--- a/src/Components/Sidebar/SearchHooksInput.module.scss
+++ b/src/Components/Sidebar/SearchHooksInput.module.scss
@@ -17,7 +17,7 @@
 
 .SearchForm input {
   width: 100%;
-  background-color: var(--black2);
+  background-color: var(--secondary-black);
   border: solid 2px #2b2b2b;
   color: var(--white);
   font-size: .9rem;
@@ -56,7 +56,7 @@
   font-weight: bold;
   font-size: 1rem;
   width: 50px;
-  color: var(--black2);
+  color: var(--secondary-black);
   background-color: var(--very-light-gray);
   border-radius: 0 6px 6px 0;
   cursor: pointer;
