--- a/src/GlobalStyles/colors.scss
+++ b/src/GlobalStyles/colors.scss
@@ -1,6 +1,6 @@
 :root {
   --black: #070b10;
-  --black2: #2b2b2b;
+  --secondary-black: #2b2b2b;
   --extra-dark-blue: #0a1119;
   --dark-blue: #151c27;
   --light-dark-blue: #363a45;
@@ -16,6 +16,7 @@
   --error-guy-color2: #2b2b2b;
   --very-light-gray: #f0f0f0;
   --white: #fff;
+  --secondary-white: #eee;
   --cyan-blue: #2483ff;
   --very-cyan-blue: #0088ff;
   --cyan-blue2: #275efe;
