--- a/src/Components/Sidebar/ActiveHooksMenu.module.scss
+++ b/src/Components/Sidebar/ActiveHooksMenu.module.scss
@@ -28,6 +28,11 @@
     background-color: var(--secondary-black);
     color: var(--white);
   }
+
+  &:focus-visible {
+    outline: none;
+    border-color: var(--light-green);
+  }
 }
 
 @include large {
