--- a/src/GlobalStyles/colors.scss
+++ b/src/GlobalStyles/colors.scss
@@ -23,6 +23,6 @@
   --cyan-blue-hover: #275efe;
   --dark-cyan: #184fee;
   --dark-cyan-hover: #0e44e8;
-  --light-green: #57bd84;
+  --light-green: #64ffda;
   --orange: #ffa500;
 }
