replaced toggleDarkModeColors function with :root.dark

--- a/src/GlobalStyles/colors.scss
+++ b/src/GlobalStyles/colors.scss
@@ -26,3 +26,12 @@
   --light-green: #64ffda;
   --orange: #ffa500;
 }
+
+:root.dark {
+  --extra-dark-blue: #eee;
+  --white: #070b10;
+  --secondary-black: #fff;
+  --very-light-gray: #2b2b2b;
+  --dark-gray-opacity5: #2483ff;
+  --secondary-white: #2b2b2b;
+}
