--- a/src/GlobalStyles/colors.scss
+++ b/src/GlobalStyles/colors.scss
@@ -1,9 +1,11 @@
 :root {
   --black: #070b10;
   --secondary-black: #2b2b2b;
+  --third-black: #383838;
   --extra-dark-blue: #0a1119;
   --dark-blue: #151c27;
   --light-dark-blue: #363a45;
+  --d: #383838;
   --dark-gray: #292a2e;
   --darker-gray: #1e1e1e;
   --very-dark-purple: #2d3058;
@@ -27,10 +29,11 @@
   --orange: #ffa500;
 }
 
-:root.dark {
+:root.light-mode {
   --extra-dark-blue: #eee;
-  --white: #070b10;
   --secondary-black: #fff;
+  --third-black: #fff;
+  --white: #070b10;
   --very-light-gray: #2b2b2b;
   --dark-gray-opacity5: #2483ff;
   --secondary-white: #2b2b2b;
