optimize light mode colors #1

--- a/src/Components/Footer/Footer.module.scss
+++ b/src/Components/Footer/Footer.module.scss
@@ -44,7 +44,8 @@
   }
 
   &:focus {
-    color: var(--very-cyan-blue);
+    color: var(--light-green);
     outline: none;
+    opacity: 1;
   }
 }
