--- a/src/Components/Sidebar/SideBar.module.scss
+++ b/src/Components/Sidebar/SideBar.module.scss
@@ -128,14 +128,14 @@
 
 .extendSideBarButton {
   position: absolute;
-  left: 298px;
+  left: 300px;
   top: 50px;
   min-width: 20px;
   min-height: 20px;
   padding: 5px 6px;
   background-color: transparent;
-  background-color: #575c71;
-  color: var(--white);
+  background-color: var(--gray-purple);
+  color: #fff;
   border-radius: 0 4px 4px 0;
   cursor: pointer;
   z-index: 103;
@@ -143,7 +143,7 @@
   opacity: 0;
 
   &:hover {
-    background-color: #70768f;
+    background-color: var(--gray-purple-secondary);
   }
 }
 
