--- a/src/GlobalStyles/colors.scss
+++ b/src/GlobalStyles/colors.scss
@@ -9,6 +9,8 @@
   --dark-gray: #292a2e;
   --darker-gray: #1e1e1e;
   --very-dark-purple: #2d3058;
+  --gray-purple: #575c71;
+  --gray-purple-secondary: #70768f;
   --dark-gray-opacity5: rgba(69, 69, 69, .5);
   --gray-opacity5: rgba(186, 186, 186, .5);
   --gray-opacity2: rgba(255, 255, 255, .2);
@@ -35,6 +37,9 @@
   --third-black: #fff;
   --white: #070b10;
   --very-light-gray: #2b2b2b;
+  --gray-purple: #959ab0;
+  --gray-purple-secondary: #7e8399;
   --dark-gray-opacity5: #2483ff;
   --secondary-white: #2b2b2b;
+  --light-green: #070b10;
 }
