--- a/src/GlobalStyles/colors.scss
+++ b/src/GlobalStyles/colors.scss
@@ -43,6 +43,7 @@
   --secondary-white: #2b2b2b;
   --light-green: #070b10;
   --gray: #363636;
+  --gray-opacity23: rgba(13, 15, 17, 0.23);
   --codeBlockLinesNumbersColor: #383a42;
   --gray-purple-secondary: #7e8399;
   --gray-purple: #959ab0;
