hide scrollbar on full-screen mode

--- a/src/Components/Shared/Mods/Mods.module.scss
+++ b/src/Components/Shared/Mods/Mods.module.scss
@@ -17,6 +17,17 @@
   gap: 20px;
 }
 
+.hidedButtonsOnFocusMode {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.focusMode {
+  opacity: 0;
+  pointer-events: none;
+}
+
 .modsContainer button {
   width: 32px;
   height: 32px;
