--- a/src/Components/Home/Hooks/HookExplanation.module.scss
+++ b/src/Components/Home/Hooks/HookExplanation.module.scss
@@ -1,8 +1,6 @@
-@import "../../../Sass/mixins";
+@import "../../../Styles/mixins";
 
-.explanation {
-
-}
+.explanation {}
 
 .hookParagraph {
   margin: 0 0 30px;
@@ -15,13 +13,13 @@
   }
 }
 
-.explanation>p + a {
+.explanation>p+a {
   font-size: 1.2rem;
   padding-left: 0;
 }
 
 @include medium {
-  .explanation>p + a {
+  .explanation>p+a {
     font-size: .9rem;
   }
 }
