--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -1,4 +1,5 @@
 @import "../Styles/mixins";
+@import url("./fonts.css");
 
 * {
   margin: 0;
@@ -23,7 +24,6 @@ body {
   background-color: var(--extra-dark-blue);
   color: var(--white);
   font-family: 'Roboto', sans-serif;
-  // font-family: 'Calibre', 'Inter', 'San Francisco', 'SF Pro Text', -apple-system, system-ui, sans-serif;
   padding-left: 292px;
   transition: padding .5s ease-in-out;
 }
